app/assets/stylesheets/application.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any styles
 * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
 * file per style scope.
 *
 */
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
 /*@import 'base/epiceditor';  
 @import 'preview/bartik';  
 @import 'preview/github';  
 @import 'preview/preview-dark';  
 @import 'editor/epic-dark';  
 @import 'editor/epic-light'; 
 */

 * {

   //border: 1px solid black;
 }
 body {
 }
 .container {
   max-width: 955px;
 }

@media screen and (max-width: 767px) {
   .twitter-sidebar, .about-sidebar { display: none;  }

}
.header-spacer {
  height: 100px;
}

.sidebar-spacer {
  margin: 12px 0;
}

code {
  font-family: Menlo,Monaco,Consolas,"Courier New";
  color: black;
  background-color: #f5f5f5;
  border: 1px solid;
  border-color: #d9d9d9;
}
pre {
  display: inline-block; 
  font-size: 10pt;
  width: 100%;
  max-width: 100%;
  overflow: auto;
  word-wrap: normal;
  white-space: pre;
  padding: 10px;
}

.img-border {
  border: 1px solid #dadada;
}

.post-body {
}

.footer {
  padding: 40px 0 20px 0;
  color: white;
  background-color: #262626;
  .contact-list {
    text-align: center;  
    .contact-icon {
      
      margin: 10px 15px;
      width: 30px;
      display: inline-block; 
        //width: 100%;
    }
  }
}

